feat: Add new endpoint (#128)
